# mess_ros

./: README.md  todo.txt
agents/burger2/: burger2.json  calibration.json  config.json
agents/burger3/: burger3.json  calibration.json  config.json
agents/hawk2/: config.json  hawk2.json
agents/wafflepi2/: calibration.json  config.json  wafflepi2.json
experiments/: CMakeLists.txt  package.xml
experiments/cache/: demo1_burger2.launch  demo2_burger2.launch  demo2_burger3.launch  demo2_wafflepi2.launch
experiments/launch/: demo1.launch  demo2.launch
experiments/src/: demo1.py  demo2.py
install/: finalize_install.sh  mess_ros_install_finalize.sh  mess_ros_install_ugv.sh
mess_logger/: CMakeLists.txt  package.xml
mess_logger/launch/: logger.launch
mess_logger/src/: mess_logger.py  test_logger.py
mess_modules/: agents.py  cache.py  chatlogs.py  experiments.py  log2terminal.py  messages.py  misc.py  node.py  nodes.py  paths.py  quaternions.py  roslaunch.py  rosnode.py  scp.py  ssh.py  uav_secondary.py  ugv.py  ugv_primary.py  ugv_secondary.py  vehicles.py  vicon.py
mess_modules/clients/: burger2.json  hawk2.json
mess_modules/vehicles/: burger2.json
mess_msgs/: CMakeLists.txt  README.md  package.xml
mess_msgs/msg/: MESS2UGV.msg  StateUAV.msg  StateUGV.msg  UAVState.msg  UGVState.msg
messop_uav/: CMakeLists.txt  README.md  package.xml
messop_uav/config/: config.json
messop_uav/src/: uav_calibration.py
messop_uav/uav_calibration/: CMakeLists.txt  package.xml
messop_uav/uav_calibration/launch/: calibration.launch
messop_uav/uav_calibration/src/: uav_calibration.py
messop_uav/uav_control/: CMakeLists.txt  package.xml
messop_uav/uav_control/launch/: px4.launch
messop_uav/uav_control/src/tests/: integration1.py
messop_uav/uav_modules/: uav_class.py  uav_functions.py
messop_ugv/: CMakeLists.txt  README.md  agent.json  package.xml
messop_ugv/config/: calibration.json  config.json
messop_ugv/launch/: calibration.launch  control.launch
messop_ugv/move2turtlebot3_bringup/: CMakeLists.txt  turtlebot3_diagnostics.cpp
messop_ugv/src/: ugv_calibration.py  ugv_control.py  ugv_vertex.py
(+17 files in other folders)
