<?xml version="1.0"?>
<package format="2">
  <name>mess_msgs</name>
  <version>1.0.0</version>
  <description>The mess_msgs package</description>
  <url type="website">https://github.com/marinarasauced/mess_msgs</url>
  <maintainer email="mjnelson@wpi.edu">Marina Nelson</maintainer>
  <author email="mjnelson@wpi.edu">Marina Nelson</author>
  <license>TO DO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
